// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches snapshot for multiple buttons 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-row -space-x-[1px]"
      >
        <button
          class="w-10 h-7 border border-gray-200  rounded-l-lg selected bg-white text-primary-500 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="List"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="sr-only"
          >
            List
          </span>
        </button>
        <button
          class="w-10 h-7 border border-gray-200  bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="Grid"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="sr-only"
          >
            Grid
          </span>
        </button>
        <button
          class="w-10 h-7 border border-gray-200 rounded-r-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="Plus"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14m-7 7V5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </svg>
          <span
            class="sr-only"
          >
            Plus
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-row -space-x-[1px]"
    >
      <button
        class="w-10 h-7 border border-gray-200  rounded-l-lg selected bg-white text-primary-500 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="List"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="sr-only"
        >
          List
        </span>
      </button>
      <button
        class="w-10 h-7 border border-gray-200  bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="Grid"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="sr-only"
        >
          Grid
        </span>
      </button>
      <button
        class="w-10 h-7 border border-gray-200 rounded-r-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="Plus"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14m-7 7V5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
          />
        </svg>
        <span
          class="sr-only"
        >
          Plus
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with additional classes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-row -space-x-[1px] pt-8"
      >
        <button
          class="w-10 h-7 border border-gray-200  rounded-l-lg selected bg-white text-primary-500 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="List"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="sr-only"
          >
            List
          </span>
        </button>
        <button
          class="w-10 h-7 border border-gray-200  bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="Grid"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="sr-only"
          >
            Grid
          </span>
        </button>
        <button
          class="w-10 h-7 border border-gray-200 rounded-r-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="Plus"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14m-7 7V5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </svg>
          <span
            class="sr-only"
          >
            Plus
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-row -space-x-[1px] pt-8"
    >
      <button
        class="w-10 h-7 border border-gray-200  rounded-l-lg selected bg-white text-primary-500 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="List"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="sr-only"
        >
          List
        </span>
      </button>
      <button
        class="w-10 h-7 border border-gray-200  bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="Grid"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="sr-only"
        >
          Grid
        </span>
      </button>
      <button
        class="w-10 h-7 border border-gray-200 rounded-r-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="Plus"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14m-7 7V5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
          />
        </svg>
        <span
          class="sr-only"
        >
          Plus
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with custom selection 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-row -space-x-[1px]"
      >
        <button
          class="w-10 h-7 border border-gray-200  rounded-l-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="List"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="sr-only"
          >
            List
          </span>
        </button>
        <button
          class="w-10 h-7 border border-gray-200  selected bg-white text-primary-500 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="Grid"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="sr-only"
          >
            Grid
          </span>
        </button>
        <button
          class="w-10 h-7 border border-gray-200 rounded-r-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
          title="Plus"
        >
          <svg
            aria-hidden="true"
            class="p-0.5 inline"
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14m-7 7V5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </svg>
          <span
            class="sr-only"
          >
            Plus
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-row -space-x-[1px]"
    >
      <button
        class="w-10 h-7 border border-gray-200  rounded-l-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="List"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="sr-only"
        >
          List
        </span>
      </button>
      <button
        class="w-10 h-7 border border-gray-200  selected bg-white text-primary-500 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="Grid"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.857 3A1.857 1.857 0 0 0 3 4.857v4.286C3 10.169 3.831 11 4.857 11h4.286A1.857 1.857 0 0 0 11 9.143V4.857A1.857 1.857 0 0 0 9.143 3H4.857Zm10 0A1.857 1.857 0 0 0 13 4.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 9.143V4.857A1.857 1.857 0 0 0 19.143 3h-4.286Zm-10 10A1.857 1.857 0 0 0 3 14.857v4.286C3 20.169 3.831 21 4.857 21h4.286A1.857 1.857 0 0 0 11 19.143v-4.286A1.857 1.857 0 0 0 9.143 13H4.857Zm10 0A1.857 1.857 0 0 0 13 14.857v4.286c0 1.026.831 1.857 1.857 1.857h4.286A1.857 1.857 0 0 0 21 19.143v-4.286A1.857 1.857 0 0 0 19.143 13h-4.286Z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="sr-only"
        >
          Grid
        </span>
      </button>
      <button
        class="w-10 h-7 border border-gray-200 rounded-r-lg bg-gray-50 text-gray-400 focus:z-10 focus:outline-hidden focus:ring-2 focus:ring-primary-300 hover:text-primary-500"
        title="Plus"
      >
        <svg
          aria-hidden="true"
          class="p-0.5 inline"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14m-7 7V5"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
          />
        </svg>
        <span
          class="sr-only"
        >
          Plus
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
